# spine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  ISSUE_DRAFT_STANDARD.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: engineering_task.md
.github/workflows/: ci.yml  ghcr-cleanup.yml  pages.yml
config/: README.md  defaults.example.yml
config/examples/: README.md  databricks_correlated_lookup.yml  demo_store_gtin_pairs.sql  demo_stores.sql  jsonplaceholder.iceberg.append.yml  jsonplaceholder.yml  postgres.example.yml  sample_query.sql
docker/: Dockerfile  README.md  startup.sh
docs/: deployment.md  development.md  getting-started.md  index.md
docs/configuration/: auth.md  backfill.md  database-incremental.md  loading.md  overview.md  parameters.md  telemetry.md  transformations.md  value-resolution.md
docs/deployment/: ecs-s3-reference.md
docs/load_strategy/: README.md
scripts/: get_token.py  map_test_coverage.py  s3_config_pull.py  s3_config_push.py
src/: get_token.py  main.py
src/audit/: __init__.py  recorder.py  schemas.py
src/auth/: __init__.py
src/collector/: __init__.py  base_collector.py  disk_streaming_collector.py  streaming_collector.py
src/config/: backfill_config.py  config_loader.py  config_models.py  (+9 more)
tests/: conftest.py  test_database_sources.py  test_get_token.py  test_main.py  test_main_run_pipeline_extra.py
theme/: README.md  home.html  main.html
(+125 files in other folders)
