[project]
name = "spine"
version = "0.0.0"
description = "Configuration-first ingestion framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.34.69",
    "click==8.1.7",
    "cryptography==42.0.5",
    "databricks-sdk==0.68.0",
    "delta-spark==3.1.0",
    "Jinja2>=3.1.0",
    "pandas==2.2.3",
    "psutil==7.1.3",
    "pyarrow>=15.0.1",
    "pydantic-settings==2.2.1",
    "PyJWT==2.8.0",
    "pyspark==3.5.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.1",
    "redis==5.0.1",
    "requests==2.33.1",
]

[dependency-groups]
dev = [
    "black==26.1.0",
    "pre-commit==4.5.1",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pytest==9.0.2",
    "ruff==0.15.2",
    "yamllint==1.38.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
exclude = ["__pycache__", ".venv", ".git"]

[tool.ruff.lint]
# Enable import sorting like isort
# F = pyflakes, I = imports, B = bugbear, RUF = ruff-specific
select = ["F", "I", "B", "RUF"]
# Ignore E203 to be compatible with Black slice spacing
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--strict-markers"]
markers = [
    "integration: optional tests that hit external systems or credentials",
    "slow: unusually slow tests",
]
